syntax = "proto3";

package surf;

option go_package = "/msg";

message Error {
  int32 code = 1;
  string detail = 2;
}

message Head {
  string msg_name = 1;
  int32 msg_type = 2;
  uint32 seq = 3;
  uint32 ttl = 4;
  Error err = 5;

  uint64 source_uid = 6;
  uint64 target_uid = 7;
}
