syntax = "proto3";

package battle;

option go_package = "service/battle/proto";

message PlayerInfo {
  uint64 uid = 1;
  int32 seat_id = 2;
  int64 score = 3;
  bool is_robot = 4;
}

message BattleConfigure {
  int32 max_game_time = 1; // second
}

message StartBattleRequest {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 1001;
  }
  string game_name = 1;
  bytes game_conf = 2;
  BattleConfigure battle_conf = 3;
  repeated PlayerInfo player_infos = 4;
}

message StartBattleResponse {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 1002;
  }
  string battle_id = 1;
}

message BattleOverReport {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 1003;
  }

  enum State {
    Finished = 0;  // 完成
    Disbanded = 1; // 解散
    Timeover = 2;  // 超时
  }

  message BattleScore {
    int64 score = 1;
    bytes extra = 2;
  }

  State state = 1;
  map<int32, BattleScore> tally = 2;
  bytes extra = 3;
}

message BattleOverReportReceipt {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 1004;
  }
  string battle_id = 1;
  int32 errcode = 2;
  string errmsg = 3;
}

message BattleStatusChangeEvent {
  string battle_id = 1;
  int32 status_before = 2;
  int32 status_now = 3;
}

// publish events
message BattleStartEvent {}
message BattleOverEvent {}
